2. Список адресов[#143123]